2007-02-12 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fixed FreeType const test to use pkg-config to get
	the compiler flags.

2007-02-11 Braden McDaniel  <braden@endoframe.com>

	openvrml-xembed isn't openvrml-player anymore.  Renamed namespace
	accordingly.

	* src/openvrml-xembed/bounded_buffer.h
	* src/openvrml-xembed/command_istream.cpp
	* src/openvrml-xembed/command_istream.h
	* src/openvrml-xembed/gtkvrmlbrowser.cpp
	* src/openvrml-xembed/main.cpp
	* src/openvrml-xembed/plugin_streambuf.cpp
	* src/openvrml-xembed/plugin_streambuf.h

2007-02-11 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-xembed/gtkvrmlbrowser.cpp
	(browser_listener::do_browser_changed(const
	openvrml::browser_event &)): Set redrawNeeded to false to ensure
	that the call to post_redraw triggers a redraw.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	Set the location entry text once a file has been selected.

	* src/openvrml-player/player.cpp
	(main(int, char *[])): Connect
	openvrml_player_on_filechooserdialog_response to the file chooser
	dialog's "response" signal.
	(openvrml_player_on_filechooserdialog_response(GtkDialog *, gint,
	gpointer)): Added function; set the location entry text once a
	file has been selected.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp
	(main(int, char *[])): Use ScopeGuard to manage libcurl clean up.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp: Added comments; applied
	G_GNUC_INTERNAL to 'extern "C"' functions that libglade doesn't
	need to be visible.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	Use Glade XML to manage the OpenvrmlPlayerFileChooserDialog.

	* src/openvrml-player/openvrml-player.glade
	(imagemenuitemopen): openvrml_player_file_open_activated now takes
	the dialog as its argument.
	(filechooserdialog): Added OpenvrmlPlayerFileChooserDialog.
	* src/openvrml-player/player.cpp