@@ -1,3 +1,11 @@
+2007-02-13 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/vrml97node.cpp
+	(image_stream_listener::jpeg_reader::do_read(const
+	std::vector<unsigned char> &)): Define the scoped_lock before the
+	call to setjmp; otherwise, a longjmp call from libjpeg code will
+	prevent the destructor from running (and freeing the mutex).
+
 2007-02-12 Braden McDaniel  <braden@endoframe.com>
 
 	* configure.ac: Fixed FreeType const test to use pkg-config to get
